tests/rosetta/out/OCaml/abbreviations-automatic.error
ocamlc: exit status 2
File "/tmp/abbreviations-automatic.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Abbreviations-automatic" is not a valid module name.
File "/tmp/abbreviations-automatic.ml", line 40, characters 18-24:
40 |           cur := ((!cur) + ch);
                       ^^^^^^
Error: This expression has type string but an expression was expected of type
         int
